devops/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 02-back
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 02.back
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: zerotwoback
                port:
                  number: 8081
